fix: set porperties for setting slider sizes as required
